[tool.poetry]
name = "captain"
version = "0.1.0"
description = ""
authors = ["Torstein Krause Johansen <rubbish@skybert.net>"]

[tool.poetry.dependencies]
python = "^3.5"
flask = "^1.0"
mysql-connector = "^2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
